--- a/index/index.html
+++ b/index/index.html
@@ -11,6 +11,15 @@
 
 <body>
 
+    <header>
+        <div class="left_header">
+
+            <img id="logo" src="../images/logo.svg">
+            <p class="p_left_header">Tasks Book</p>
+        </div>
+        <img id="menu" src="../images/menu.svg">
+
+    </header>
 
 
 
