--- a/index/index.html
+++ b/index/index.html
@@ -21,6 +21,51 @@
 
     </header>
 
+    <section class="center">
+        <div class="card">
+            <form>
+                <div class="text_container">
+                    <p class="text-center">Вход в аккаунт</p>
+                </div>
+                <div class="form-group">
+                    <input class="form-control item" type="email" name="email" id="email" placeholder="Email" required>
+                </div>
+                <div class="form-group">
+                    <input class="form-control item" type="password" name="Пароль" minlength="6" id="password"
+                        placeholder="Пароль" required>
+                </div>
+
+                <div class="form-group1">
+                    <button class="btn btn-primary btn-block create-account" type="submit">Войти</button>
+                </div>
+
+                <div class="registration">
+                    <p></p>Еще нет аккаунта? </p><a href="#" id="regist"> Регистрация</a>
+                </div>
+                <div class="separation">
+                    <hr class="hr">
+                    <p class="separation_p">или</p>
+                    <hr class="hr">
+                </div>
+                <div class="social_network">
+                    <div class="network">
+                        <a href="#"> <img class="img_network" src="../images/facebook 1.svg"></a>
+                        <a href="#"> <img class="img_network" src="../images/Group.svg"></a>
+                    </div>
+                </div>
+            </form>
+
+
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer">
+            <p> <span class="copy"> &copy;</span> copyright 2021</p>
+            <p class=""><a href="#" class="confidentiality">Политика конфиденциальности</a></p>
+        </div>
+    </footer>
+
 
 
     <script src="../js/script.js"></script>
