--- a/index/index.html
+++ b/index/index.html
@@ -19,10 +19,10 @@
     <header>
         <div class="left_header">
 
-            <img id="logo" src="../images/logo.svg">
+            <img id="logo" src="../images/logo.svg" alt="logo">
             <p class="p_left_header">Tasks Book</p>
         </div>
-        <img id="menu" src="../images/menu.svg">
+        <img id="menu" src="../images/menu.svg" alt="menu">
 
     </header>
 
