--- a/index/mainPage.html
+++ b/index/mainPage.html
@@ -17,89 +17,103 @@
 
 <body>
     <section class="menu">
-        <div class="left_header">
+        <div>
+            <div class="left_header">
 
-            <img id="logo" src="../images/logo.svg">
-            <p class="p_left_header">Tasks Book</p>
+                <img id="logo" src="../images/logo.svg" alt="logo">
+                <p class="p_left_header">Tasks Book</p>
+            </div>
+
+            <div class="categories">
+                <h1 class="h1">Категории</h1>
+                <div class="subcategory">
+                    <div><img class="ico" src="../images/home.svg" alt="home"> Дом</div>
+                    <p class="illumination"></p>
+                </div>
+
+                <div class="subcategory">
+                    <div><img class="ico" src="../images/users.svg" alt="users"> Семья</div>
+                    <p class="illumination"></p>
+                </div>
+
+                <div class="subcategory">
+                    <div><img class="ico" src="../images/briefcase.svg" alt="briefcase"> Работа</div>
+                    <p class="illumination"></p>
+                </div>
+
+                <div class="subcategory">
+                    <div><img class="ico" src="../images/zap.svg" alt="zap"> Спорт</div>
+                    <p class="illumination"></p>
+                </div>
+
+                <div class="addition">
+                    <img class="ico1" src="../images/plus-square.svg" alt="plus-square">
+                    <div>Добавить</div>
+
+                </div>
+            </div>
+
+            <div class="data">
+                <h1 class="h_1">Данные</h1>
+
+                <div class="data1 data2">
+                    <img class="ico2" src="../images/bar-chart-2.svg" alt="bar-chart-2">
+                    <div>Статистика</div>
+
+                </div>
+
+                <div class="data1">
+                    <img class="ico2" src="../images/trending-up.svg" alt="trending-up">
+                    <div>Сравнить</div>
+
+                </div>
+            </div>
+
+            <div class="exid">
+
+                <div class="exid_menu">
+                    <img class="ico3" src="../images/user.svg" alt="user">
+                    <div>Личный кабинет</div>
+                </div>
+
+                <div class="exid_menu">
+                    <img class="ico3" src="../images/moon.svg" alt="moon">
+                    <div>Темный режим</div>
+                </div>
+
+                <div class="exid_menu">
+                    <img class="ico3" src="../images/settings.svg" alt="settings">
+                    <div>Настройки</div>
+                </div>
+
+                <div class="exid_menu star">
+                    <img class="ico3" src="../images/c.svg" alt="settings">
+                    <div>Премиум</div>
+                </div>
+
+
+                <div class="exid_menu">
+                    <img class="ico3" src="../images/log-in.svg" alt="log-in">
+                    <div>Выйти</div>
+                </div>
+            </div>
         </div>
+    </section>
 
-        <div class="categories">
-            <h1 class="h1">Категории</h1>
-            <div class="subcategory">
-                <div><img class="ico" src="../images/home.svg"> Дом</div>
-                <p class="illumination"></p>
-            </div>
-
-            <div class="subcategory">
-                <div><img class="ico" src="../images/users.svg"> Семья</div>
-                <p class="illumination"></p>
-            </div>
-
-            <div class="subcategory">
-                <div><img class="ico" src="../images/briefcase.svg"> Работа</div>
-                <p class="illumination"></p>
-            </div>
-
-            <div class="subcategory">
-                <div><img class="ico" src="../images/zap.svg"> Спорт</div>
-                <p class="illumination"></p>
-            </div>
-
-            <div class="addition">
-                <img class="ico1" src="../images/plus-square.svg">
-                <div>Добавить</div>
-
-            </div>
+    <header>
+        <div class="newTask">
+            <img class="cross" src="../images/Group 1.svg" alt="Group 1">
+            <p class="crossP">Новая задача</p>
         </div>
+        <img class="Times_of_Day" src="../images/moon.svg" alt="moon">
+        <div class="user">
+            <p class="userName">Хорошего дня, username</p>
+            <img class="userImg" src="../images/header__avatar.svg" alt="userImg">
 
-        <div class="data">
-            <h1 class="h_1">Данные</h1>
-
-            <div class="data1 data2">
-                <img class="ico2" src="../images/bar-chart-2.svg">
-                <div>Статистика</div>
-
-            </div>
-
-            <div class="data1">
-                <img class="ico2" src="../images/trending-up.svg">
-                <div>Сравнить</div>
-
-            </div>
+            <img class="JackdawImg" src="../images/header__user-menu.svg" alt="userMenu">
         </div>
-
-        <div class="exid">
-
-            <div class="exid_menu">
-                <img class="ico3" src="../images/user.svg">
-                <div>Личный кабинет</div>
-            </div>
-
-            <div class="exid_menu">
-                <img class="ico3" src="../images/moon.svg">
-                <div>Темный режим</div>
-            </div>
-
-            <div class="exid_menu">
-                <img class="ico3" src="../images/settings.svg">
-                <div>Настройки</div>
-            </div>
-
-            <div class="exid_menu star">
-                <img class="ico3" src="../images/star.svg">
-                <div>Премиум</div>
-            </div>
-
-
-            <div class="exid_menu">
-                <img class="ico3" src="../images/log-in.svg">
-                <div>Выйти</div>
-            </div>
-
-
-
-        </div>
-
+    </header>
+    <section class="mainUnit">
     </section>
 
     <script src="../js/mainPage.js"></script>
