continuation of layout

--- a/index/mainPage.html
+++ b/index/mainPage.html
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="exid_menu star">
-                    <img class="ico3" src="../images/c.svg" alt="settings">
+                    <img class="ico3" src="../images/star.svg" alt="star">
                     <div>Премиум</div>
                 </div>
 
@@ -99,21 +99,76 @@
             </div>
         </div>
     </section>
-
-    <header>
-        <div class="newTask">
-            <img class="cross" src="../images/Group 1.svg" alt="Group 1">
-            <p class="crossP">Новая задача</p>
-        </div>
-        <img class="Times_of_Day" src="../images/moon.svg" alt="moon">
-        <div class="user">
-            <p class="userName">Хорошего дня, username</p>
-            <img class="userImg" src="../images/header__avatar.svg" alt="userImg">
-
-            <img class="JackdawImg" src="../images/header__user-menu.svg" alt="userMenu">
-        </div>
-    </header>
     <section class="mainUnit">
+        <header>
+            <div class="newTask">
+                <img class="cross" src="../images/Group 1.svg" alt="Group 1">
+                <p class="crossP">Новая задача</p>
+            </div>
+            <img class="Times_of_Day" src="../images/moon.svg" alt="moon">
+            <div class="user">
+                <p class="userName">Хорошего дня, username</p>
+                <img class="userImg" src="../images/header__avatar.svg" alt="userImg">
+
+                <img class="JackdawImg" src="../images/header__user-menu.svg" alt="userMenu">
+            </div>
+        </header>
+
+        <div class="tasks">
+            <div class="successes">
+                <div class="successestitleHeader">
+                    <p class="successesTitle">Успехи за неделю</p>
+                    <div class="ellipsis">
+                        <p class="ellipsisSpan"></p>
+                        <p class="ellipsisSpan"></p>
+                        <p class="ellipsisSpan"></p>
+                    </div>
+                </div>
+
+                <div class="taskBoard">
+                    <div class="taskBoard_1">
+                        <p class="taskBoardP">Создано</p>
+                        <div class="rangeOfTasks">
+                            <div class="meaning"></div> <span class="meaning">113</span>
+                            <p class="taskBoardP">задач</p>
+                        </div>
+
+                    </div>
+
+                    <div class="taskBoard_1">
+                        <p class="taskBoardP">Завершено</p>
+                        <div class="rangeOfTasks">
+                            <div class="meaning"></div> <span class="meaning">113</span>
+                            <p class="taskBoardP">задач</p>
+                        </div>
+
+                    </div>
+
+                    <div class="taskBoard_1">
+                        <p class="taskBoardP">Удалено</p>
+                        <div class="rangeOfTasks">
+                            <div class="meaning"></div> <span class="meaning">113</span>
+                            <p class="taskBoardP">задач</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="activeTasks">
+                <div class="successestitleHeader">
+                    <p class="successesTitle">Успехи за неделю</p>
+                    <div class="ellipsis">
+                        <p class="ellipsisSpan"></p>
+                        <p class="ellipsisSpan"></p>
+                        <p class="ellipsisSpan"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        </div>
+
     </section>
 
     <script src="../js/mainPage.js"></script>
