--- a/index/mainPage.html
+++ b/index/mainPage.html
@@ -17,7 +17,7 @@
 
 <body>
     <section class="menu">
-        <div>
+        <div class="menuNext">
             <div class="left_header">
 
                 <img id="logo" src="../images/logo.svg" alt="logo">
@@ -113,63 +113,192 @@
                 <img class="JackdawImg" src="../images/header__user-menu.svg" alt="userMenu">
             </div>
         </header>
+        <div class="tasksMain">
+            <div class="tasks">
+                <div class="successes">
+                    <div class="successestitleHeader">
+                        <p class="successesTitle">Успехи за неделю</p>
+                        <div class="ellipsis">
+                            <p class="ellipsisSpan"></p>
+                            <p class="ellipsisSpan"></p>
+                            <p class="ellipsisSpan"></p>
+                        </div>
+                    </div>
 
-        <div class="tasks">
-            <div class="successes">
-                <div class="successestitleHeader">
-                    <p class="successesTitle">Успехи за неделю</p>
-                    <div class="ellipsis">
-                        <p class="ellipsisSpan"></p>
-                        <p class="ellipsisSpan"></p>
-                        <p class="ellipsisSpan"></p>
+                    <div class="taskBoard">
+                        <div class="taskBoard_1">
+                            <p class="taskBoardP">Создано</p>
+                            <div class="rangeOfTasks">
+                                <div class="meaning"></div> <span class="meaning">113</span>
+                                <p class="taskBoardP">задач</p>
+                            </div>
+
+                        </div>
+
+                        <div class="taskBoard_1">
+                            <p class="taskBoardP">Завершено</p>
+                            <div class="rangeOfTasks">
+                                <div class="meaning"></div> <span class="meaning">113</span>
+                                <p class="taskBoardP">задач</p>
+                            </div>
+
+                        </div>
+
+                        <div class="taskBoard_1">
+                            <p class="taskBoardP">Удалено</p>
+                            <div class="rangeOfTasks">
+                                <div class="meaning"></div> <span class="meaning">113</span>
+                                <p class="taskBoardP">задач</p>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
 
-                <div class="taskBoard">
-                    <div class="taskBoard_1">
-                        <p class="taskBoardP">Создано</p>
-                        <div class="rangeOfTasks">
-                            <div class="meaning"></div> <span class="meaning">113</span>
-                            <p class="taskBoardP">задач</p>
+                <div class="activeTasks">
+                    <div class="successestitleHeader">
+                        <p class="successesTitle">Активные задачи</p>
+                        <div class="ellipsis">
+                            <p class="ellipsisSpan"></p>
+                            <p class="ellipsisSpan"></p>
+                            <p class="ellipsisSpan"></p>
                         </div>
+                    </div>
+                    <div class="checkСontainer">
+                        <div class="check">
+                            <input class="checkbox" type="checkbox">
+                            <p class="checkP">Приготовить вкусный ужин</p>
+                        </div>
+
+                        <div class="removal">
+                            <img src="../images/edit.svg" class="removalImg" alt="edit">
+                            <img src="../images/trash.svg" class="removalImg" alt="trash">
+                        </div>
+                    </div>
+
+                    <div class="checkСontainer">
+                        <div class="check">
+                            <input class="checkbox" type="checkbox">
+                            <p class="checkP">Приготовить вкусный ужин</p>
+                        </div>
+
+                        <div class="removal">
+                            <img src="../images/edit.svg" class="removalImg" alt="edit">
+                            <img src="../images/trash.svg" class="removalImg" alt="trash">
+                        </div>
+                    </div>
+
+                    <div class="checkСontainer">
+                        <div class="check">
+                            <input class="checkbox" type="checkbox">
+                            <p class="checkP">Приготовить вкусный ужин</p>
+                        </div>
+
+                        <div class="removal">
+                            <img src="../images/edit.svg" class="removalImg" alt="edit">
+                            <img src="../images/trash.svg" class="removalImg" alt="trash">
+                        </div>
+                    </div>
+
+                    <div class="checkСontainer">
+                        <div class="check">
+                            <input class="checkbox" type="checkbox">
+                            <p class="checkP">Приготовить вкусный ужин</p>
+                        </div>
+
+                        <div class="removal">
+                            <img src="../images/edit.svg" class="removalImg" alt="edit">
+                            <img src="../images/trash.svg" class="removalImg" alt="trash">
+                        </div>
+                    </div>
+
+                    <div class="successestitleHeader">
+                        <p class="successesTitle">Завершенные задачи</p>
 
                     </div>
 
-                    <div class="taskBoard_1">
-                        <p class="taskBoardP">Завершено</p>
-                        <div class="rangeOfTasks">
-                            <div class="meaning"></div> <span class="meaning">113</span>
-                            <p class="taskBoardP">задач</p>
+                    <div class="checkСontainer">
+                        <div class="check">
+                            <input class="checkbox" type="checkbox">
+                            <p class="checkP">Приготовить вкусный ужин</p>
                         </div>
 
+                        <div class="removal">
+                            <img src="../images/edit.svg" class="removalImg" alt="edit">
+                            <img src="../images/trash.svg" class="removalImg" alt="trash">
+                        </div>
                     </div>
 
-                    <div class="taskBoard_1">
-                        <p class="taskBoardP">Удалено</p>
-                        <div class="rangeOfTasks">
-                            <div class="meaning"></div> <span class="meaning">113</span>
-                            <p class="taskBoardP">задач</p>
+                    <div class="checkСontainer">
+                        <div class="check">
+                            <input class="checkbox" type="checkbox">
+                            <p class="checkP">Приготовить вкусный ужин</p>
                         </div>
 
+                        <div class="removal">
+                            <img src="../images/edit.svg" class="removalImg" alt="edit">
+                            <img src="../images/trash.svg" class="removalImg" alt="trash">
+                        </div>
                     </div>
+
                 </div>
+
+
             </div>
-
-            <div class="activeTasks">
-                <div class="successestitleHeader">
-                    <p class="successesTitle">Успехи за неделю</p>
-                    <div class="ellipsis">
-                        <p class="ellipsisSpan"></p>
-                        <p class="ellipsisSpan"></p>
-                        <p class="ellipsisSpan"></p>
+            <section class="infoSection">
+                <div class="time">
+                    <p class="timeP">Такс такс такс</p>
+                    <div class="timeData">
+                        <div class="timeDataBlock">
+                            <p class="timeDataP">На часах у нас</p>
+                            <img src="../images/clock.svg" class="timeClock" alt="clock">
+                            <span class="timeSpan">12:30:43</span>
+                        </div>
+                        <div class="timeDataBlock">
+                            <p class="timeDataP">А сегодня у нас</p>
+                            <img src="../images/calendar.svg" class="timeClock" alt="calendar">
+                            <span class="timeSpan">5 апреля 2021</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
 
+                <div class="containerObservation">
+                    <div class="observation">
+                        <p class="observationP">Наблюдение</p>
+                        <div class="observationText">
+                            <p class="observationTextP">Больше всего задач вы создаете в Понедельник</p>
+                            <p class="observationTextP">Больше всего задач вы завершаете во Вторник</p>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="containerObservation">
+                    <div class="observation">
+                        <p class="observationP">Факт дня</p>
+                        <div class="observationText">
+                            <p class="observationTextP">Человек, который просыпается в 6 утра, по статистике, закрывает
+                                все задачи к 18:00 вечера.<br>
+                                Попробуем также 🤔?</p>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="containerObservation addition">
+                    <div class="observation">
+                        <p class="observationP">График успеваемости</p>
+
+
+                    </div>
+                </div>
+
+            </section>
         </div>
 
     </section>
+
 
     <script src="../js/mainPage.js"></script>
 </body>
