--- a/index/mainPage.html
+++ b/index/mainPage.html
@@ -252,12 +252,12 @@
                         <div class="timeDataBlock">
                             <p class="timeDataP">На часах у нас</p>
                             <img src="../images/clock.svg" class="timeClock" alt="clock">
-                            <span class="timeSpan">12:30:43</span>
+                            <span class="timeSpan timeJS">12:30:43</span>
                         </div>
                         <div class="timeDataBlock">
                             <p class="timeDataP">А сегодня у нас</p>
                             <img src="../images/calendar.svg" class="timeClock" alt="calendar">
-                            <span class="timeSpan">5 апреля 2021</span>
+                            <span class="timeSpan spanJS">5 апреля 2021</span>
                         </div>
                     </div>
                 </div>
